@@ -22,6 +22,7 @@ requires 'Class::Utils' => 0.06;
 requires 'Error::Pure' => 0.17;
 requires 'Imager' => 0;
 requires 'Imager::Fill' => 0;
+requires 'List::MoreUtils' => 0;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Image-Checkerboard';
